# Pgen

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
crates/bip39-lexical-data/: Cargo.toml  README.md  build.rs
crates/eff-lexical-data/: Cargo.toml  README.md  build.rs
crates/lexical-data/: Cargo.toml  README.md  build.rs
crates/lexical-data/src/: lib.rs
crates/pgen/: Cargo.toml  README.md  build.rs
crates/pgen/src/: bip39_algorithm.rs  lib.rs  main.rs
data/moby/: readme.txt
data/wordlists/moby/: mhyph.tar.Z  mpron.tar.Z  mshak.tar.Z
moby/: mlang.tar.Z  mpos.tar.Z  mwords.tar.Z  readme.txt
src/: cli.yaml  main.rs
