[package]
name = "bip39-lexical-data"
description = "BIP39 Lexical Data"
license = "ISC"
readme = "README.md"
repository = "https://github.com/ctsrc/Pgen/crates/bip39-lexical-data"
version = "1.0.0"
authors = ["Erik Nordstrøm <erik@nordstroem.no>"]
categories = ["science", "data-structures", "no-std"]
edition = "2021"

[dependencies]
