[package]
name = "lexical-data"
description = "Lexical data"
license = "ISC"
readme = "README.md"
repository = "https://github.com/ctsrc/Pgen/crates/lexical-data"
version = "1.0.0-rc.1"
authors = ["Erik Nordstrøm <erik@nordstroem.no>"]
categories = ["science", "data-structures", "no-std"]
edition = "2021"

[dependencies]
