[package]
name = "pgen"
description = "Passphrase Generator"
license = "ISC"
readme = "README.md"
repository = "https://github.com/ctsrc/Pgen/crates/pgen"
version = "3.0.0-alpha.1"
authors = ["Erik Nordstrøm <erik@nordstroem.no>"]
categories = ["command-line-utilities", "cryptography"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bip39-lexical-data = { workspace = true }
clap = { workspace = true }
eff-lexical-data = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
